Autoformat java files in src/com/facebook/buck/distributed.
Test Plan: CI

Reviewed By: marcinkosiba

fbshipit-source-id: 7b823c7